# project1_morozov_vasilii_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  input_handler.py  main.py  player_actions.py  utils.py
